--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,11 @@ version: '3'
 services:
   app:
     build: .
-    #  ./srcディレクトリをコンテナ内の/appディレクトリにマウント
+    #  コンテナにマウントするディレクトリを指定
     volumes:
       - ./src:/app
+      - node_modules:/app/node_modules
+      - .next:/app/.next
     # Node.jsのファイル監視機能→ファイルの変更を自動的に検知する
     environment:
       - WATCHPACK_POLLING=true
@@ -13,3 +15,6 @@ services:
     # ポートのマッピング(Host:Port)
     ports:
       - "3000:3000"
+volumes:
+  node_modules:
+  next:
